--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,8 @@ project(SentenceValidation VERSION 0.1.0)
 
 include("cmake/CPM.cmake")
 include("cmake/dlib.cmake")
+include("cmake/googletest.cmake")
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-set(CMAKE_BUILD_TYPE Debug)
 
 file(GLOB_RECURSE SentenceValidationLib_SOURCES   CONFIGURE_DEPENDS ./lib/**.cpp)
 file(GLOB_RECURSE SentenceValidationLib_SOURCES_C CONFIGURE_DEPENDS ./lib/**.c)
@@ -23,4 +23,22 @@ target_sources(SentenceValidation PRIVATE ${SentenceValidation_SOURCES})
 target_link_libraries(SentenceValidation PRIVATE SentenceValidationLib)
 set_property(TARGET SentenceValidation PROPERTY CXX_STANDARD 14)
 target_include_directories(SentenceValidation PRIVATE include)
+
+
+# testing
+enable_testing()
+include(GoogleTest)
+file(GLOB TEST_FILES_CPP "${CMAKE_CURRENT_LIST_DIR}/test/*.cpp")
+file(GLOB TEST_FILES_CX  "${CMAKE_CURRENT_LIST_DIR}/test/*.cx")
+file(GLOB TEST_FILES     "${CMAKE_CURRENT_LIST_DIR}/test/*.c")
+list(APPEND TEST_FILES ${TEST_FILES_CPP} ${TEST_FILES_CX})
+foreach (test_file IN LISTS TEST_FILES)
+    get_filename_component(filenamewe ${test_file} NAME_WE)
+    string(CONCAT execname "test_" ${filenamewe})
+    add_executable(${execname} ${test_file})
+    set_property(TARGET ${execname} PROPERTY CXX_STANDARD 14)
+    target_link_libraries(${execname} gtest_main)
+    target_link_libraries(${execname} SentenceValidationLib)
+    gtest_discover_tests(${execname})
+endforeach()
 
